--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,12 @@ body {
 .modal-images {
   display: flex;
   overflow-x: scroll;  /* Enable horizontal scrolling */
+  scrollbar-width: none;  /* For Firefox */
+  -ms-overflow-style: none;  /* For Internet Explorer and Edge */
+}
+
+.modal-images::-webkit-scrollbar {
+  display: none;  /* For Chrome, Safari, and Opera */
 }
 
 .modal-images img {
